# ideatoscreenshot

./: .gitignore  .ralph-context.json  .ralph-iterations.jsonl  README.md  prd.json  progress.txt  pyproject.toml
demo-output/: report.html  results.json
design_scout/: __init__.py  cache.py  cli.py
design_scout/report/: __init__.py  generator.py
design_scout/report/templates/: report.html
design_scout/scoring/: evaluator.py  prompts.py
design_scout/screenshot/: __init__.py  browser.py  capture.py
design_scout/search/: __init__.py  aggregator.py  awwwards.py  behance.py  dribbble.py  duckduckgo.py  google.py  landingfolio.py  lapa.py  onepagelove.py  producthunt.py  siteinspire.py
