[project]
name = "design-scout"
version = "0.1.0"
description = "全自動設計靈感搜集工具 — 輸入關鍵字，輸出 Top 5 設計截圖 + AI 評分"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "httpx>=0.25",
    "jinja2>=3.0",
]

[project.scripts]
design-scout = "design_scout.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
