[project]
name = "design-scout"
version = "0.1.0"
description = "競品 Landing Page 研究工具 — 輸入關鍵字，輸出截圖牆 + 手動策展"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "httpx>=0.25",
    "jinja2>=3.0",
]

[project.scripts]
design-scout = "design_scout.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
